--- a/templates/front/profil.html.twig
+++ b/templates/front/profil.html.twig
@@ -18,6 +18,8 @@
             <p class="card-text">Votre email {{ app.user.email}} </p>
             <a href=" {{ path('modifprofil', {'id':app.user.id} )}} " class="btn btn-info mx-auto">Modifier</a>
         </div>
+
+        <h2>Historique de vos réservations</h2>
     </div>
 
 
