--- a/templates/laurence/ajout_reservation.html.twig
+++ b/templates/laurence/ajout_reservation.html.twig
@@ -2,29 +2,31 @@
 
 {% block body %}
 
-    {% if not app.user %}
 
 
-
+{#    {% if not app.user %}#}
 {#        redirection page connexion #}
+{#        {% else %}#}
 
-        {% else %}
 
+<div class="w-25 m-4">
             {{ form_start(formResa) }}
 
             {{ form_row(formResa.date) }}
+{#            <label for="date">Quelle date :</label>#}
+{#            <input type="date" name="date">#}
             {{ form_row(formResa.pack) }}
 
 
-{#            redirection reserver#}
+
 
     <button class="btn btn-outline-primary mb-5" type="submit">Ajouter</button>
-{% endif %}
+{#{% endif %}#}
 
 
     {{ form_end(formResa) }}
 
-
+    </div>
 
 
 
