--- a/templates/front/verif_dispo.html.twig
+++ b/templates/front/verif_dispo.html.twig
@@ -3,33 +3,26 @@
 
 {% block body %}
 
-    <form action="reservation" method="get">
+Nous sommes le : {{ today }}
 
-        <label for="pack">Quel pack avez-vous choisi ?</label>
+{#    {{ path('verif_dispo')}}#}
+<h1 class="my-5">Vérifions la disponibilité de votre pack </h1>
+<form action=" " method="get">
 
-            {% for pack in packs %}
-            <select name="pack" >
-            <option value="">--Choisir une option--</option>
-            <option value=" {{ pack.nom}} "></option>
-            </select>
-            <label for="date">A quelle date désirez-vous réserver ?</label>
-            <input type="date"  name="date" min="2017-04-01" max="2017-04-30">
+    <label class="my-3" for="pack">Quel pack avez-vous choisi ?</label>
 
+    <select name="pack" class="form-control w-25" id="verif_pack">
+        <option value=""></option>
+        {% for pack in packs %}
+            <option value="{{ pack.id }}">{{ pack.nom }}</option>
         {% endfor %}
+    </select>
 
-    </form>
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
+    <label class="my-3" for="date">Entre quelles dates désirez-vous réserver ?</label>
+    <p>  <input type="date"  name="date_debut" min= {{ today }}  max="2022-04-30">
+        <input type="date" name="date_fin" min="2021-05-12" max="2022-04-30"></p>
+
+    <button type="submit">Vérifier</button>
+
+</form>
 {% endblock %}
