--- a/templates/prisca/index.html.twig
+++ b/templates/prisca/index.html.twig
@@ -159,17 +159,17 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
     <div class="row">
       <!--Grid column-->
       <div class="col-lg-4 col-md-12 mb-4">
-        <img src="images/imagesUpload/img(55)-mini.jpg" class="img-fluid z-depth-1" alt="1">
+        <img src={{asset('/images/imagesUpload/img-1.jpg')}} class="img-fluid z-depth-1" alt="1">
       </div>
       <!--Grid column-->
       <!--Grid column-->
       <div class="col-lg-4 col-md-6 mb-4">
-        <img src="images/imagesUpload/img(55)-mini.jpg" class="img-fluid z-depth-1-half" alt="2">
+        <img src={{asset('/images/imagesUpload/img-6.jpg')}}  class="img-fluid z-depth-1-half" alt="2">
       </div>
       <!--Grid column-->
       <!--Grid column-->
       <div class="col-lg-4 col-md-6 mb-4">
-        <img src="images/imagesUpload/img(55)-mini.jpg" class="img-fluid z-depth-2" alt="3">
+        <img src={{asset('/images/imagesUpload/img-3.jpg')}}  class="img-fluid z-depth-2" alt="3">
       </div>
       <!--Grid column-->
     </div>
@@ -178,17 +178,17 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
     <div class="row">
       <!--Grid column-->
       <div class="col-lg-4 col-md-12 mb-4">
-        <img src="images/imagesUpload/img(55)-mini.jpg" class="img-fluid z-depth-3" alt="4">
+        <img src={{asset('/images/imagesUpload/img-4.jpg')}}  class="img-fluid z-depth-3" alt="4">
       </div>
       <!--Grid column-->
       <!--Grid column-->
       <div class="col-lg-4 col-md-6 mb-4">
-        <img src="images/imagesUpload/img(55)-mini.jpg" class="img-fluid z-depth-4" alt="5">
+        <img src={{asset('/images/imagesUpload/img-5.jpg')}}  class="img-fluid z-depth-4" alt="5">
       </div>
       <!--Grid column-->
       <!--Grid column-->
       <div class="col-lg-4 col-md-6 mb-4">
-        <img src="images/imagesUpload/img(55)-mini.jpg" class="img-fluid z-depth-5" alt="6">
+        <img src={{asset('/images/imagesUpload/img-2.jpg')}}  class="img-fluid z-depth-5" alt="6">
       </div>
       <!--Grid column-->
     </div>
