--- a/templates/prisca/index.html.twig
+++ b/templates/prisca/index.html.twig
@@ -242,7 +242,7 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
 </div>
 
 				<h2 class="mt-4">Olivia</h2>
-				<p class="text-center">
+				<p class="text-justify">
 Bonjour bonjour!
 Le cadre idyllique des plus beaux paysages de vacances, les mines réjouies de nos invités, et surtout… un feu d’artifices mémorable qui nous a été offert par notre ami artificier.
 Comment ne pas garder ces précieux souvenirs toute une vie! Cela nous motive à organiser une énorme fête pour nos 15 ans de mariage. On prend les mêmes et on recommence?
@@ -263,7 +263,7 @@ Comment ne pas garder ces précieux souvenirs toute une vie! Cela nous motive à
 </div>
 
 				<h2 class="mt-4">Eric</h2>
-				<p class="text-center">
+				<p class="text-justify">
 Salut !
 Mon anniversaire était un moment unique dans ma vie. Je m’en souviens comme si c’était hier. Son ambiance « Love Power », le cadre idyllique des plus beaux paysages de vacances...
 								</p>
@@ -283,7 +283,7 @@ Mon anniversaire était un moment unique dans ma vie. Je m’en souviens comme s
 </div>
 
 				<h2 class="mt-4">Faby</h2>
-				<p class="text-center">
+				<p class="text-justify">
 Hi !
 Mon mariage était un moment unique dans ma vie. Je m’en souviens comme si c’était hier. Son ambiance « Love Power », le cadre idyllique des plus beaux paysages de vacances, les mines réjouies de nos invités, et surtout… un feu d’artifices mémorable qui nous a été offert par notre ami artificier.
 Comment ne pas garder ces précieux souvenirs toute une vie! Cela nous motive à organiser une énorme fête pour nos 15 ans de mariage. On prend les mêmes et on recommence?
