--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,10 +30,13 @@
                     <a class="nav-link text-white" href="{{ path('ajout_pack')}} ">ajout pack</a>
                 </li>
                 <li class="nav-item active mr-4">
-                    <a class="nav-link text-white" href="{{ path('ajout_resa')}}">ajout reservation</a>
+                    <a class="nav-link text-white" href="{{ path('top_pack')}}">top_packn</a>
                 </li>
                 <li class="nav-item active mr-4">
-                    <a class="nav-link text-white" href="{{ path('verif_dispo')}}">verif dispo</a>
+                    <a class="nav-link text-white" href="{{ path('ajout_resa')}}">verif dispo</a>
+                </li>
+                <li class="nav-item active mr-4">
+                    <a class="nav-link text-white" href="{{ path('top_pack')}}">top</a>
                 </li>
 
             </ul>
@@ -44,7 +47,7 @@
                         utilisateur
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="{{ path('profil') }}">Profil</a>
+                        <a class="dropdown-item" href="{{ path('profil', {id:app.user.id}) }}">Profil</a>
                         {% if is_granted('ROLE_ADMIN') %}
                             <a class="dropdown-item" href="{{ path('backoffice') }}">Back-office</a>
                         {% endif %}
@@ -64,16 +67,17 @@
     <div class="container">
 
 
+        {% for message in app.flashes('success') %}
+            <div class="col-md-6 bg-secondary p-4 rounded mx-auto text-center text-white mb-3">
+                {{ message }}
+            </div>
+        {% endfor %}
 
 
 
 
 
 
-{#    <nav class="navbar navbar-expand-lg navbar-light bg-secondary">#}
-{#    <a class="nav-link text-white " href="{{path('login')}}">Connexion</a>#}
-{#    <a class="nav-link text-white " href="{{ path('inscription') }}">Inscription</a>#}
-{#    </nav>#}
         {% block body %}
 
 
