--- a/templates/front/profil.html.twig
+++ b/templates/front/profil.html.twig
@@ -19,10 +19,35 @@
             <a href=" {{ path('modifprofil', {'id':app.user.id} )}} " class="btn btn-info mx-auto">Modifier</a>
         </div>
 
-        <h2>Historique de vos réservations</h2>
     </div>
+    <h2>Historique de vos réservations</h2>
+    <table class="table table-striped">
+        <thead class="thead-light">
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Pack</th>
+            <th scope="col">Prix</th>
+            <th scope="col">Date</th>
+            <th scope="col">Email</th>
+
+        </tr>
+        </thead>
+        <tbody class="text-center">
+        {% for reservation in reservations %}
+            <tr>
+                <td>{{ reservation.id }}</td>
+                <td>{{ reservation.pack.nom }}</td>
+                <td>{{ reservation.pack.prix }}</td>
+                <td>{{ reservation.date | date('d-m-Y') }}</td>
 
 
+{#                <td><a href="{{ path('resa_client', {'id': user.id }) }}"><img src="{{ asset('images/loupe.png') }}" alt="voir"></a></td>#}
+
+{#                <td><a href="{{ path('supp_user', {'id': user.id }) }}"><img src="{{ asset('images/delete.png') }}" alt="supprimer"></a></td>#}
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
 
 
