--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,7 +33,7 @@
                     <a class="nav-link text-white" href="{{ path('top_pack')}}">top_packn</a>
                 </li>
                 <li class="nav-item active mr-4">
-                    <a class="nav-link text-white" href="{{ path('ajout_resa')}}">verif dispo</a>
+                    <a class="nav-link text-white" href="{{ path('verif_dispo')}}">verif dispo</a>
                 </li>
                 <li class="nav-item active mr-4">
                     <a class="nav-link text-white" href="{{ path('top_pack')}}">top</a>
