--- a/templates/prisca/base.html.twig
+++ b/templates/prisca/base.html.twig
@@ -82,7 +82,7 @@
 
 
 					<li class="nav-item active mr-2">
-					<a href="{{path('profil')}}"><img class="bd-placeholder-img rounded-circle" width="50" height="50" src={{asset('/images/imagesUpload/icones/fem.jpeg')}} role="img" aria-label="profil">
+					<a href=""><img class="bd-placeholder-img rounded-circle" width="50" height="50" src={{asset('/images/imagesUpload/icones/fem.jpeg')}} role="img" aria-label="profil">
 					</a></img>
 				
 	
