--- a/templates/prisca/base.html.twig
+++ b/templates/prisca/base.html.twig
@@ -5,8 +5,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="Le meilleur du service évènementiel familial">
 		<meta name="author" content="Fêtes un voeu, au service de vos festivités">
-</style>
-	
 		<title>FETES UN VOEU</title>
 
 		<!-- Bootstrap core CSS -->
@@ -221,19 +219,22 @@ class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-4">
 
 </div>
 
-</section></footer><!-- Footer -->
+</section>
 
 <!-- Back to top button -->
 <button type="button" class="btn-floating btn-lg" id="btn-back-to-top">
   <i class="fas fa-arrow-up"></i>
 </button>
+	</main>
+<!-- Footer -->
 
-
-<!-- Copyright --><div class="text-center p-4" style="background-color: #eddcf9">© 2021 Fêtes un voeu
-	- <a class="text-reset fw-bold" href="/"> Protection des données</a><!-- Copyright -->
-		</div></footer><!-- Footer -->
+<!-- Copyright -->
+<footer>
+<div class="text-center p-4" style="background-color: #eddcf9">© 2021 Fêtes un voeu
+	- <a class="text-reset fw-bold" href="/"> Protection des données</a>
+		</div></footer>
 		
-		</main>
+	
 	
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 	<script src={{asset('assets/js/bootstrap.bundle.js')}}></script>
