--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,20 +2,105 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}FETES UN VOEU !{% endblock %}</title>
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	        <meta charset="utf-8">
+	    	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	    	<meta name="description" content="Le meilleur du service évènementiel familial">
+	    	<meta name="author" content="Fêtes un voeu, au service de vos festivités">
+	    	<title>FETES UN VOEU</title>
+     
 
-        {% endblock %}
+		<!-- Bootstrap core CSS -->
+		<link href={{asset('assets/css/bootstrap.min.css')}} rel="stylesheet">
+		<link href={{asset('assets/css/style.css')}} rel="stylesheet">
+		<link href={{asset('assets/css/bootstrap.bundle.js')}} rel="stylesheet">
 
-    </head>
-    <body>
+		<style>
+			.bd-placeholder-img {
+				font-size: 1.125rem;
+				text-anchor: middle;
+				-webkit-user-select: none;
+				-moz-user-select: none;
+				-ms-user-select: none;
+				user-select: none;
+			}
+
+			@media(min-width: 768px) {
+				.bd-placeholder-img-lg {
+					font-size: 3.5rem;
+				}
+			}
+		</style>
+		<!-- Custom styles for this template -->
+		<link href={{asset('assets/css/carousel.css')}} rel="stylesheet">
+
+           {% endblock %}
+	</head>
+	<body>
+
+		<header>
+
+    <nav class="d-flex navbar-default navbar-expand-md fixed-top p-3 ">
+				<div><a href="/prisca"> <img src={{asset('images/imagesUpload/logo/logo_fetes_un_voeu.png')}} alt="Logo fête un voeu" width="125">
+					</img></a></div>
+				<div><a class="navbar-brand mt-4 ml-5" href="/prisca">Fêtes un voeu<br>...au service de vos festivités
+				</a></div>
+				<hr>
+					<div class="collapse navbar-collapse container-fluid" id="navbarCollapse">
+						<ul class="navbar-nav w-100 justify-content-md-end" style="background-color:">
+							<li class="nav-item active">
+								<a class="nav-link mr-2" href="#">Accueil
+								</a>
+							</li>
+						
+							<li class="nav-item active mr-2">
+								<a class="nav-link" href="#prestations">Nos prestations
+								</a>
+							</li>
+							<li class="nav-item active mr-2">
+								<a class="nav-link" href="#galerie">Galerie
+								</a>
+							</li>
+						</li>
+						<li class="nav-item active mr-2">
+							<a class="nav-link" href="#avis">Avis
+							</a>
+						</li>
+					</li>
+					<li class="nav-item active mr-2">
+						<a class="nav-link" href="#contact">Contact
+						</a>
+					</li>
+				</li>
+				<li class="nav-item active mr-5">
+					<a class="nav-link" href="#">Réservation
+					</a>
+				</li>
+
+				<!-- Section: Social media -->
+
+				<a href="https://www.facebook.com/fetesvosvoeux" target="blank"><img src="{{asset('/images/imagesUpload/icones/facebook.svg')}}" width="40em" height="40em" class="mr-2"></img></a>
+				<a href="https://www.instagram.com/fetes_unvoeu/?hl=fr" target="blank"><img src="{{asset('/images/imagesUpload/icones/instagram-orange.svg')}}" width="40em" height="40em" class="mr-2" ></img></a>
+				<a href="https://github.com/PriscaR78/fetes_un_voeu" target="blank"><img src="{{asset('/images/imagesUpload/icones/github-border-dark.svg')}}" width="45em" height="45em" class="mr-5"></img></a>
+
+
+					<li class="nav-item active mr-2">
+					<a href=""><img class="bd-placeholder-img rounded-circle" width="50" height="50" src={{asset('/images/imagesUpload/icones/fem.jpeg')}} role="img" aria-label="profil">
+					</a></img>
+				
+	
+			</ul>
+
+</div>
+ </nav>
 
 
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-        <a class="navbar-brand text-info" href="{{ path('home')}}">ChezMarcel</a>
+        <a class="navbar-brand text-info" href="{{ path('home')}}">Back Office</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -27,16 +112,16 @@
                     <a class="nav-link text-white" href="{{ path('home')}} ">Accueil</a>
                 </li>
                 <li class="nav-item active mr-4">
-                    <a class="nav-link text-white" href="{{ path('ajout_pack')}} ">ajout pack</a>
+                    <a class="nav-link text-white" href="{{ path('ajout_pack')}} ">Ajout pack</a>
                 </li>
                 <li class="nav-item active mr-4">
-                    <a class="nav-link text-white" href="{{ path('top_pack')}}">top_packn</a>
+                    <a class="nav-link text-white" href="{{ path('top_pack')}}">Top_packn</a>
                 </li>
                 <li class="nav-item active mr-4">
-                    <a class="nav-link text-white" href="{{ path('verif_dispo')}}">verif dispo</a>
+                    <a class="nav-link text-white" href="{{ path('verif_dispo')}}">Vérif dispo</a>
                 </li>
                 <li class="nav-item active mr-4">
-                    <a class="nav-link text-white" href="{{ path('top_pack')}}">top</a>
+                    <a class="nav-link text-white" href="{{ path('top_pack')}}">Top</a>
                 </li>
 
             </ul>
@@ -63,8 +148,153 @@
             {% endif %}
         </div>
     </nav>
+</header>
 
     <div class="container">
+    
+
+
+
+<main role="main">
+<div id="myCarousel" class="carousel slide img-fluid mx-auto" data-ride="carousel"><ol class="carousel-indicators">
+<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+<li data-target="#myCarousel" data-slide-to="1"></li>
+<li data-target="#myCarousel" data-slide-to="2"></li>
+<li data-target="#myCarousel" data-slide-to="3"></li></ol><div class="carousel-inner">
+<div class="carousel-item active">
+	<img class="bd-placeholder-img" width="100%" height="auto" src={{asset('/images/imagesUpload/ban-anniv-enfant.jpg')}} role="img"><rect width="100%" height="auto"></img>
+
+</div>
+<div class="carousel-item">
+	<img class="bd-placeholder-img" width="100%" height="auto" src={{asset('/images/imagesUpload/ban-anniv-adulte.jpg')}} role="img"><rect width="100%" height="auto"></img>
+
+</div>
+
+<div class="carousel-item">
+	<img class="bd-placeholder-img" width="100%" height="auto" src={{asset('/images/imagesUpload/ban-karaoke.jpg')}} role="img"><rect width="100%" height="auto"></img>
+
+</div>
+<div class="carousel-item">
+	<img class="bd-placeholder-img" width="100%" height="auto" src={{asset('/images/imagesUpload/ban-soiree.jpg')}} role="img"><rect width="100%" height="auto"></img>
+
+</div>
+
+</div>
+<a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+<span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+<span class="carousel-control-next-icon" aria-hidden="true"></span>
+<span class="sr-only">Next</span></a></div>
+
+<div class="div-concept" >
+<div class="w-70 text-center">
+<h1>Le concept de “Fêtes un voeu”</h1><br>
+<p class="concept">L'anniversaire de votre bambin arrive ?<br>
+Une fête de famille ?<br>
+Ou tout simplement envie de déguster un bon gâteau fait maison ?<br>
+Demandez-nous !<br>
+Fêtes un voeu, au service de vos festivités !</p></div></div><br>
+
+
+<!-- Marketing messaging and featurettes
+					    ================================================== --><!-- Wrap the rest of the page in another container to center all the content. -->
+						<div class="container marketing">{% block content %}{% endblock %} </div><!-- /.container --><!-- FOOTER --><!-- RENSEIGNEMENYS --><!-- Footer -->
+<footer class="text-center bg-light text-muted "> <!-- CONTACT -->
+<div class="mb-5 p-3 shadow m-4 ">
+<div class="align-content-center">
+	<div>
+		<h2 class="text-center bg-light" id="contact">Contactez-nous</h2>
+	</div>
+
+	<div class="container">
+		<div class="row g-2">
+			<div class="col-md">
+				<div class="form-floating">
+					<input type="text" class="form-control" id="nom" value="" placeholder="Votre nom">
+
+				</div>
+			</div>
+			<div class="col-md">
+				<div class="form-floating">
+					<input type="text" class="form-control" id="prenom" value="" placeholder="Votre prénom">
+
+				</div>
+			</div>
+		</div>
+
+		<fieldset>
+			<div class="form-group">
+				<label for="email">Entrez votre mail</label>
+				<input type="email" class="form-control" id="email" placeholder="Votre e-mail">
+			</div>
+
+			<div class="form-group">
+				<label for="text">Votre message</label>
+				<textarea class="form-control" id="message" rows="3"></textarea>
+			</div>
+
+			<input class="mb-5" type="button" submit="Envoyer" value="Envoyer">
+		</fieldset>
+	</form>
+</div></div>
+<hr>
+
+
+<!-- Section: Links  --><section class=""><div
+class="container text-center text-md-start mt-5">
+<!-- Grid row -->
+<div
+	class="row mt-3">
+	<!-- Grid column -->
+	<div
+		class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+		<!-- Content -->
+		<h6 class="text-uppercase fw-bold mb-4">
+			FETES UN VOEU
+		</h6>
+		<p>
+			10 rue Paul DOUMER
+			<br>
+			78 130 LES MUREAUX
+		</p>
+
+</div><!-- Section: Links  -->
+<div
+class="col-md-2 col-lg-3 col-xl-3 mx-auto mb-4">
+<h6 class="text-uppercase fw-bold mb-4">
+	Contact
+</h6>
+<p>contact@fetesunvoeu.fr<br>06 18 45 75 88 - 01 12 21 34 89
+</p></div>
+<div
+class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-4">
+
+<h6 class="text-uppercase fw-bold mb-4">
+	Horaires d'ouverture
+</h6>
+<p>
+	Lundi à Samedi
+	<br>
+	9h - 18h30
+</p></div></div>
+		<div style="background-color:red;" width="100%">
+			<img width="100%" src={{asset('/images/imagesUpload/carte_fuv_optimisee.jpg')}}></img>
+		</div>
+
+</div>
+
+</section>       
+<!-- Back to top button -->
+<button type="button" class="btn-floating btn-lg" id="btn-back-to-top">
+  <i class="fas fa-arrow-up"></i>
+</button>
+	</main>
+<!-- Copyright -->
+
+<div class="text-center p-4" style="background-color: #eddcf9">© 2021 Fêtes un voeu
+	- <a class="text-reset fw-bold" href="/"> Protection des données</a>
+		</div></footer>
+
 
 
         {% for message in app.flashes('success') %}
@@ -73,41 +303,9 @@
             </div>
         {% endfor %}
 
-
-
-
-
-
-        {% block body %}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+ {% block body %}
 
         {% endblock %}
-
-
-
-
-
-
-
-
-
-
-
-
 
         {% block javascripts %}
             <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -119,6 +317,8 @@
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
                     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
                     crossorigin="anonymous"></script>
+            <script src={{asset('assets/js/bootstrap.bundle.js')}}></script>
+	        <script src="https://kit.fontawesome.com/e4895b9a2a.js" crossorigin="anonymous"></script>
         {% endblock %}
     </body>
 </html>
