--- a/templates/prisca/base.html.twig
+++ b/templates/prisca/base.html.twig
@@ -239,4 +239,6 @@ class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-4">
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 	<script src={{asset('assets/js/bootstrap.bundle.js')}}></script>
 	<script src="https://kit.fontawesome.com/e4895b9a2a.js" crossorigin="anonymous"></script>
-	</body></html>
+	</body>
+	
+	</html>
