--- a/templates/prisca/base.html.twig
+++ b/templates/prisca/base.html.twig
@@ -134,7 +134,7 @@ Fêtes un voeu, au service de vos festivités !</p></div></div><br>
 
 <!-- Marketing messaging and featurettes
 					    ================================================== --><!-- Wrap the rest of the page in another container to center all the content. -->
-						<div class="container marketing">{% block content %}{% endblock %} </div><!-- /.container --><!-- FOOTER --><!-- RENSEIGNEMENYS --><!-- Footer -->
+						<div class="container marketing">{% block content %}{% endblock %} </div><!-- Footer -->
 <footer class="text-center bg-light text-muted "> <!-- CONTACT -->
 <div class="mb-5 p-3 shadow m-4 ">
 <div class="align-content-center">
@@ -226,10 +226,9 @@ class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-4">
   <i class="fas fa-arrow-up"></i>
 </button>
 	</main>
-<!-- Footer -->
 
 <!-- Copyright -->
-<footer>
+
 <div class="text-center p-4" style="background-color: #eddcf9">© 2021 Fêtes un voeu
 	- <a class="text-reset fw-bold" href="/"> Protection des données</a>
 		</div></footer>
