--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -176,7 +176,7 @@ Fêtes un voeu, au service de vos festivités !</p></div></div><br>
 
 <!-- Marketing messaging and featurettes
 					    ================================================== --><!-- Wrap the rest of the page in another container to center all the content. -->
-						<div class="container marketing">{% block content %}{% endblock %} </div>
+						<div class="container marketing">{% block content %}{% endblock %} </div><!-- Footer -->
 <footer class="text-center bg-light text-muted "> <!-- CONTACT -->
 <div class="mb-5 p-3 shadow m-4 ">
 <div class="align-content-center">
