--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -81,37 +81,7 @@
 					</a>
 				</li>
 
-				<!-- Section: Social media -->
-
-				<a href="https://www.facebook.com/fetesvosvoeux" target="blank"><img src="{{asset('/images/imagesUpload/icones/facebook.svg')}}" width="40em" height="40em" class="mr-2"></img></a>
-				<a href="https://www.instagram.com/fetes_unvoeu/?hl=fr" target="blank"><img src="{{asset('/images/imagesUpload/icones/instagram-orange.svg')}}" width="40em" height="40em" class="mr-2" ></img></a>
-				<a href="https://github.com/PriscaR78/fetes_un_voeu" target="blank"><img src="{{asset('/images/imagesUpload/icones/github-border-dark.svg')}}" width="45em" height="45em" class="mr-5"></img></a>
-
-
-					<li class="nav-item active mr-2">
-					<a href=""><img class="bd-placeholder-img rounded-circle" width="50" height="50" src={{asset('/images/imagesUpload/icones/fem.jpeg')}} role="img" aria-label="profil">
-					</a></img>
-				
-	
-			</ul>
-
-</div>
- </nav>
-
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-        <a class="navbar-brand text-info" href="{{ path('home')}}">Back Office</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse ml-5" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active mr-4">
-                    <a class="nav-link text-white" href="{{ path('home')}} ">Accueil</a>
-                </li>
-                <li class="nav-item active mr-4">
+                 <li class="nav-item active mr-4">
                     <a class="nav-link text-white" href="{{ path('ajout_pack')}} ">Ajout pack</a>
                 </li>
                 <li class="nav-item active mr-4">
@@ -124,8 +94,18 @@
                     <a class="nav-link text-white" href="{{ path('top_pack')}}">Top</a>
                 </li>
 
-            </ul>
-            {% if app.user %}
+				<!-- Section: Social media -->
+
+				<a href="https://www.facebook.com/fetesvosvoeux" target="blank"><img src="{{asset('/images/imagesUpload/icones/facebook.svg')}}" width="40em" height="40em" class="mr-2"></img></a>
+				<a href="https://www.instagram.com/fetes_unvoeu/?hl=fr" target="blank"><img src="{{asset('/images/imagesUpload/icones/instagram-orange.svg')}}" width="40em" height="40em" class="mr-2" ></img></a>
+				<a href="https://github.com/PriscaR78/fetes_un_voeu" target="blank"><img src="{{asset('/images/imagesUpload/icones/github-border-dark.svg')}}" width="45em" height="45em" class="mr-5"></img></a>
+
+
+					<li class="nav-item active mr-2">
+					<a href=""><img class="bd-placeholder-img rounded-circle" width="50" height="50" src={{asset('/images/imagesUpload/icones/fem.jpeg')}} role="img" aria-label="profil">
+					</a></img>
+				
+	{% if app.user %}
                 <div class="nav-item dropdown my-2 my-lg-0 mr-5">
                     <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -146,26 +126,15 @@
                 <a class="nav-link " href="{{path('login')}}">Connexion</a>
                 <a class="nav-link " href="{{ path('inscription') }}">Inscription</a>
             {% endif %}
-        </div>
-    </nav>
+			</ul>
+
+</div>
+ </nav>
+
 </header>
 
     <div class="container">
     
-
-
-        {% for message in app.flashes('success') %}
-            <div class="col-md-6 bg-secondary p-4 rounded mx-auto text-center text-white mb-3">
-                {{ message }}
-            </div>
-        {% endfor %}
-
- {% block body %}
-
-        {% endblock %}
-       
-
-
 <main role="main">
 <div id="myCarousel" class="carousel slide img-fluid mx-auto" data-ride="carousel"><ol class="carousel-indicators">
 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -294,12 +263,27 @@ class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-4">
 
 </div>
 
+
 </section>       
 <!-- Back to top button -->
 <button type="button" class="btn-floating btn-lg" id="btn-back-to-top">
   <i class="fas fa-arrow-up"></i>
 </button>
+
 	</main>
+
+<div>
+
+        {% for message in app.flashes('success') %}
+            <div class="">
+                {{ message }}
+            </div>
+        {% endfor %}
+
+ {% block body %}
+
+        {% endblock %}
+</div>
 <!-- Copyright -->
 
 <div class="text-center p-4" style="background-color: #eddcf9">© 2021 Fêtes un voeu
