--- a/templates/front/home.html.twig
+++ b/templates/front/home.html.twig
@@ -7,12 +7,12 @@
 {% block body %}
 
     <div class="container">
-    <h1 class=" text-info m-5">Accueil</h1>
-    <h2 class=" text-warning my-3">  Hello {{ prenom }} !  </h2>
-    <h2 class=" text-primary my-3">Quel âge as-tu ? J'ai {{ age }} ans.</h2>
+    <h1 class=" text-info m-5"></h1>
+    <h2 class=" text-warning my-3"> </h2>
+    <h2 class=" text-primary my-3"></h2>
 
-    <h3 class=" text-secondary my-2">A quoi sers-tu ? je suis un {{ informations.fonction }}. </h3>
-        <h3 class=" text-danger my-2">Un point faible ? euh ... les {{ informations.faiblesse }} !</h3>
+    <h3 class=" text-secondary my-2"></h3>
+        <h3 class=" text-danger my-2"></h3>
 
 {#    {% for information in informations %}#}
 {#        {{ information }}#}
