--- a/templates/laurence/reservation.html.twig
+++ b/templates/laurence/reservation.html.twig
@@ -60,7 +60,7 @@
     {#        redirection page connexion #}
     {#        {% else %}#}
 
-
+<h2>Votre réservation</h2>
     <div class="w-25 m-4">
         {{ form_start(formResa) }}
 
