--- a/templates/laurence/gestion_reservations.html.twig
+++ b/templates/laurence/gestion_reservations.html.twig
@@ -9,7 +9,7 @@
     {% endfor %}
     <div class="row justify-content-end">
         <div class="col-md-3">
-            <a class="btn btn-info my-3 " href="{{ path('ajout_resa') }}">Ajouter une nouvelle réservation</a>
+            <a class="btn btn-info my-3 " href="{{ path('verif_dispo') }}">Ajouter une nouvelle réservation</a>
         </div>
     </div>
     <table class="table table-striped">
