--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -77,7 +77,7 @@
 					</li>
 				</li>
 				<li class="nav-item active mr-5">
-					<a class="nav-link" href="#">Réservation
+					<a class="nav-link" href="{{ path('verif_dispo')}}">Réservation
 					</a>
 				</li>
 
@@ -87,9 +87,7 @@
                 <li class="nav-item active mr-4">
                     <a class="nav-link text-white" href="{{ path('top_pack')}}">Top_packn</a>
                 </li>
-                <li class="nav-item active mr-4">
-                    <a class="nav-link text-white" href="{{ path('verif_dispo')}}">Vérif dispo</a>
-                </li>
+             
                 <li class="nav-item active mr-4">
                     <a class="nav-link text-white" href="{{ path('top_pack')}}">Top</a>
                 </li>
